# ChangeLog for sys-apps/coreutils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.239 2008/11/27 18:38:13 vapier Exp $

  27 Nov 2008; Mike Frysinger <vapier@gentoo.org> coreutils-6.12-r2.ebuild:
  Block sys-apps/stat #248312 by Diego E. Pettenò.

*coreutils-6.12-r2 (16 Oct 2008)
*coreutils-6.10-r3 (16 Oct 2008)

  16 Oct 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/coreutils-6.10-selinux-opt.patch, +coreutils-6.10-r3.ebuild,
  +coreutils-6.12-r2.ebuild:
  Fix automagical linking against libselinux per bug #230073.

*coreutils-6.12-r1 (27 Jul 2008)

  27 Jul 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/gnulib-utimens-update.patch, -coreutils-6.12.ebuild,
  +coreutils-6.12-r1.ebuild:
  Fix for bug #224483. People with old kernels can use this once more.

*coreutils-6.12 (01 Jun 2008)

  01 Jun 2008; Mike Frysinger <vapier@gentoo.org> +coreutils-6.12.ebuild:
  Version bump.

  29 Apr 2008; Brent Baude <ranger@gentoo.org> coreutils-6.10-r2.ebuild:
  stable ppc, bug 218927

  24 Apr 2008; Jeroen Roovers <jer@gentoo.org> coreutils-6.10-r2.ebuild:
  Stable for HPPA (bug #218927).

  24 Apr 2008; Markus Rothe <corsair@gentoo.org> coreutils-6.10-r2.ebuild:
  Stable on ppc64; bug #218927

  24 Apr 2008; <welp@gentoo.org> coreutils-6.10-r2.ebuild:
  Stable on amd64; bug 218927

  24 Apr 2008; Raúl Porcel <armin76@gentoo.org> coreutils-6.10-r2.ebuild:
  alpha/ia64/sparc/x86 stable wrt #218927

*coreutils-6.11 (19 Apr 2008)

  19 Apr 2008; Mike Frysinger <vapier@gentoo.org> +coreutils-6.11.ebuild:
  Version bump.

  17 Apr 2008; nixnut <nixnut@gentoo.org> coreutils-6.10-r1.ebuild:
  Stable on ppc wrt bug 217239

  14 Apr 2008; Jeroen Roovers <jer@gentoo.org> coreutils-6.10-r1.ebuild:
  Stable for HPPA (bug #217239).

  14 Apr 2008; Markus Rothe <corsair@gentoo.org> coreutils-6.10-r1.ebuild:
  Stable on ppc64; bug #217239
