@@ -15,6 +15,8 @@ DIST coreutils-6.12-patches-1.0.tar.lzma 9758 RMD160 cfef9541194e4c0c7fdab2d342d
 DIST coreutils-6.12.tar.lzma 3743740 RMD160 cf561826da0af4be7585f65c3b284563ddcdf382 SHA1 77aaa268371c015d5cb4307216608b9a383432f4 SHA256 4c9106a97c00cdc9e41c4c91427d2066130dd3dccd8e1643697b2963fff0546e
 DIST coreutils-6.9-patches-1.3.tar.bz2 49170 RMD160 a9ef9fb1850f343ede8c6ca81da9d55ebf719756 SHA1 6d88f3ac1da66c99622f09aec9c264efbec1f099 SHA256 e25a74602d0107747d61d3dda9d05673b307fe761f81776cdd5f7ab0262bcae7
 DIST coreutils-6.9.tar.bz2 5384378 RMD160 c6ae65204b2e9c234a1140f39a8be1ee5cdcaab7 SHA1 10310a78c4e1d9f742f3815ac28e9bf1086a5885 SHA256 89c2895ad157de50e53298b22d91db116ee4e1dd3fdf4019260254e2e31497b0
+DIST coreutils-7.1-patches-1.tar.lzma 6902 RMD160 1817fce9321a2862b2053ff6c88135c1bc3b371e SHA1 93e048d769052cbc3a536acd9d3b4f03a756a5cd SHA256 33cbf0ca267942a11961f7f3e025f9e5bb8c0e5dc81ae02f12f4bc489c2daa9e
+DIST coreutils-7.1.tar.gz 9533070 RMD160 e2ef184ca0917c38bec8a54b858862f9d02449c5 SHA1 e5f57aed49da5d2e1c7833f7b7cc31aa96fe8a4e SHA256 813cb19fa19a885f342664109c7c5810f0081b624ff317bba8d1b6ccd83c2a05
 EBUILD coreutils-6.10-r1.ebuild 5970 RMD160 7e1fcf688911fc08f829d855381a78e6605a756d SHA1 6b322414a8f7ac0acc4b06ea636ad9ae64236e78 SHA256 5212ecda9e0adc3635736646e0827230d4bb26b28be6c181b79ce0aa66cd60f6
 EBUILD coreutils-6.10-r2.ebuild 5972 RMD160 8a43cbfec9541d2319f19c900bb9ed55234820f7 SHA1 3f2176af45cd41f2a094b215ea669e34e236a712 SHA256 eeba8204fc026b43662c35b16dfcf2d9976a3a080a951b36d36da83870707e94
 EBUILD coreutils-6.10-r3.ebuild 6104 RMD160 7c53bc8da8bb984e74a5d18ce25f79cd710083ce SHA1 a6210f3581c1ac36746ad2612bd23bb253146504 SHA256 97f2a5b78cba4772defcec73936f75aae5c1149453833c618d8ebbf3788854ca
@@ -22,5 +24,6 @@ EBUILD coreutils-6.11.ebuild 5782 RMD160 46222149dc242d40eee24eaaca903b14e3f2a1e
 EBUILD coreutils-6.12-r1.ebuild 6171 RMD160 0aaaf0b72f42c6041192670c66bfc4137eeb8461 SHA1 183a278339244cb14eb026e6b878c3c8cc6e367d SHA256 80141deb3eb2b50a1f2bddfb36aba01dd2ed1a9a61e8558f61ba7849e113bd2e
 EBUILD coreutils-6.12-r2.ebuild 6840 RMD160 475bf1ff435c098802c6e4b45e02ad70cda58b05 SHA1 e6f8b19b2203c85a5bcf234dd373ec8d08af4a01 SHA256 2a8368bc539a0a5f0c3b8314017483d2459fb30536efb808c2462acb605fd252
 EBUILD coreutils-6.9-r1.ebuild 6282 RMD160 fa02b453bef11548b750c5d7feadcff9ea6262d2 SHA1 c6e23055a5279943cd6cd7d0b986cdfa0dad06a0 SHA256 3d1660377b7de513b331c16ac0a005096575a4b8a73bfef57a623f3f47331794
-MISC ChangeLog 36136 RMD160 82a6613e69624841a7948d0b8f636360f960db97 SHA1 7f9ec899e04c117f12b039e4a17fc47f55816125 SHA256 c5554a9358c119cffdf4a78cfa63c630fd2f0e84050d25abcea71c10725c94ba
+EBUILD coreutils-7.1.ebuild 4514 RMD160 19a6d4a5643f02466241530d6399d708af9a8459 SHA1 2d8759a8a8525d780bfe1aae0ed841366eaa5af3 SHA256 9e4e9cbaac531f1e634719c0cff2884efef47735e8be600360cadf8916e048fa
+MISC ChangeLog 36264 RMD160 e7abc99265eaf61675b62c9da997e693f0ee71e1 SHA1 7f15d0b9974042d3e1e35fffe348c50fffeac4d8 SHA256 0604029b34d196b86bba56dc0ccdf9849a2b005732858b7899514ff20666ad99
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
